src/test/ui/issues/issue-19883.stderr
error[E0576]: cannot find associated type `Dst` in trait `From`
  --> $DIR/issue-19883.rs:19:30
   |
LL |         <Dst as From<Self>>::Dst
   |                              ^^^ not found in `From`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0576`.
